cmake and script changes

--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -29,7 +29,9 @@ if(TFMODEL_OPTIMIZE)
 endif()
 
 # -----------find protobuf lib-----------
-find_package(Protobuf REQUIRED)
+if (NOT DEFINED Protobuf_LIBRARIES OR NOT DEFINED Protobuf_INCLUDE_DIRS)
+    find_package(Protobuf REQUIRED)
+endif()
 if (${CMAKE_VERSION} VERSION_LESS "3.6.0")
     set(Protobuf_LIBRARIES ${PROTOBUF_LIBRARIES})
     set(Protobuf_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS})
@@ -74,4 +76,4 @@ set(COMMAND_SRC
 )
 
 add_executable(MNNConvert ${SRC_PATH}/MNNConverter.cpp ${COMMAND_SRC})
-target_link_libraries(MNNConvert tensorflow caffe onnx mnn_bizcode tflite optimizer COMMON_LIB ${Protobuf_LIBRARIES})
+target_link_libraries(MNNConvert tensorflow caffe onnx_mnn mnn_bizcode tflite optimizer COMMON_LIB ${Protobuf_LIBRARIES})
