--- a/tools/converter/source/onnx/CMakeLists.txt
+++ b/tools/converter/source/onnx/CMakeLists.txt
@@ -5,7 +5,7 @@ project(onnx)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
 
-find_package(Protobuf REQUIRED)
+# find_package(Protobuf REQUIRED)
 if (${CMAKE_VERSION} VERSION_LESS "3.6.0")
     set(Protobuf_LIBRARIES ${PROTOBUF_LIBRARIES})
     set(Protobuf_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS})
@@ -26,5 +26,5 @@ include_directories(${SRC_PATH}/IR)
 include_directories(${SRC_PATH}/include)
 
 file(GLOB ONNX_SRC ${SRC_PATH}/onnx/*)
-add_library(onnx SHARED ${ONNX_SRC} ${ONNX_PROTO_SRCS})
-target_link_libraries(onnx ${Protobuf_LIBRARIES})
+add_library(onnx_mnn SHARED ${ONNX_SRC} ${ONNX_PROTO_SRCS})
+target_link_libraries(onnx_mnn ${Protobuf_LIBRARIES})
