--- a/tools/converter/source/caffe/CMakeLists.txt
+++ b/tools/converter/source/caffe/CMakeLists.txt
@@ -5,7 +5,7 @@ project(caffe)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
 
-find_package(Protobuf REQUIRED)
+# find_package(Protobuf REQUIRED)
 if (${CMAKE_VERSION} VERSION_LESS "3.6.0")
     set(Protobuf_LIBRARIES ${PROTOBUF_LIBRARIES})
     set(Protobuf_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS})
@@ -24,5 +24,5 @@ include_directories(${SRC_PATH}/include)
 
 file(GLOB CAFFE_SRC ${SRC_PATH}/caffe/*)
 
-add_library(caffe SHARED ${CAFFE_SRC} ${CAFFE_PROTO_SRCS})
-target_link_libraries(caffe ${Protobuf_LIBRARIES})
+add_library(caffe2mnn SHARED ${CAFFE_SRC} ${CAFFE_PROTO_SRCS})
+target_link_libraries(caffe2mnn protobuf::libprotobuf)
