--- a/tools/converter/source/tensorflow/CMakeLists.txt
+++ b/tools/converter/source/tensorflow/CMakeLists.txt
@@ -1,4 +1,4 @@
-protobuf_generate_cpp(TENSORFLOW_PROTO_SRCS TENSORFLOW_PROTO_HDRS
+add_proto(
     ${CMAKE_CURRENT_LIST_DIR}/attr_value.proto
     ${CMAKE_CURRENT_LIST_DIR}/function.proto
     ${CMAKE_CURRENT_LIST_DIR}/graph.proto
@@ -12,7 +12,4 @@ protobuf_generate_cpp(TENSORFLOW_PROTO_SRCS TENSORFLOW_PROTO_HDRS
 )
 
 file(GLOB TENSORFLOW_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
-add_library(MNNConverterTF OBJECT ${TENSORFLOW_SRC} ${TENSORFLOW_PROTO_SRCS})
-target_include_directories(MNNConverterTF PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/)
-list(APPEND MNN_CONVERTER_BACKENDS_OBJECTS $<TARGET_OBJECTS:MNNConverterTF>)
-list(APPEND MNN_CONVERTER_BACKENDS_TARGETS MNNConverterTF)
+add_source(${TENSORFLOW_SRC})
