--- a/tools/converter/source/optimizer/CMakeLists.txt
+++ b/tools/converter/source/optimizer/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(GLOB_RECURSE OPTIMIZER_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
+add_source(${OPTIMIZER_SRC})
 add_library(MNNConverterOpt OBJECT ${OPTIMIZER_SRC})
 list(APPEND MNN_CONVERTER_BACKENDS_OBJECTS $<TARGET_OBJECTS:MNNConverterOpt>)
 list(APPEND MNN_CONVERTER_BACKENDS_TARGETS MNNConverterOpt)
